--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <link rel="icon" type="image/png" href="/src/assets/icons/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/icons/favicon.svg" />
+    <link rel="shortcut icon" href="/src/assets/icons/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/src/assets/icons/apple-touch-icon.png" />
+    <link rel="manifest" href="/src/assets/icons/site.webmanifest" />
+    <title>Game Legion</title>
   </head>
   <body>
     <div id="root"></div>
